--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,21 @@
     <string name="btnBusinessMode">ビジネス編</string>
     <string name="btnScoreShow">スコア</string>
 
+    <!--activity_score.xml-->
+    <string name="tv_total_score">総合平均</string>
+    <string name="labelTotalAverage"><u>○○.○○点</u></string>
+    <string name="tv_average">平均点</string>
+    <string name="tv_max_score">最高得点</string>
+    <string name="tv_word">単語編</string>
+    <string name="tv_daily">日常会話編</string>
+    <string name="tv_slang">ネットスラング編</string>
+    <string name="tv_business">ビジネス編</string>
+    <string name="labelWordModeAve"><u>""</u></string>   <!--文字が入ると下線がつきます -->
+    <string name="labelWordModeMaxScore"><u>""</u></string>   <!--文字が入ると下線がつきます -->
+    <string name="labelDailyModeAve"><u>""</u></string>  <!--文字が入ると下線がつきます -->
+    <string name="labelDailyModeMaxScore"><u>""</u></string>  <!--文字が入ると下線がつきます -->
+    <string name="labelSlangModeAve"><u>""</u></string>  <!--文字が入ると下線がつきます -->
+    <string name="labelSlangModeMaxScore"><u>""</u></string>  <!--文字が入ると下線がつきます -->
+    <string name="labelBusinessModeAve"><u>""</u></string>   <!--文字が入ると下線がつきます -->
+    <string name="labelBusinessModeMaxScore"><u>""</u></string>   <!--文字が入ると下線がつきます -->
 </resources>
